--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "styled-components": "6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "9.13.0",
@@ -26,7 +27,7 @@
     "typescript": "5.6.2",
     "typescript-eslint": "8.10.0",
     "vite": "5.4.9",
-    "vite-plugin-html": "^3.2.2",
-    "vite-plugin-singlefile": "^2.0.2"
+    "vite-plugin-html": "3.2.2",
+    "vite-plugin-singlefile": "2.0.2"
   }
 }
