--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "1.3.1",
+    "i": "0.3.7",
+    "npm": "10.9.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-dropzone": "^14.3.1",
