--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "1.3.1",
-    "i": "0.3.7",
+    "jotai": "2.10.1",
     "npm": "10.9.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
