--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "1.3.1",
+    "@radix-ui/react-radio-group": "1.2.1",
     "jotai": "2.10.1",
     "npm": "10.9.0",
     "react": "18.3.1",
