--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "1.1.2",
     "@radix-ui/react-icons": "1.3.1",
     "@radix-ui/react-radio-group": "1.2.1",
     "jotai": "2.10.1",
