--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "npm": "10.9.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-dropzone": "^14.3.1",
+    "react-dropzone": "14.3.1",
+    "react-shimmer-effects": "1.0.3",
     "styled-components": "6.1.13"
   },
   "devDependencies": {
