--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "drudejson",
+    "name": "gs-import-export-backend",
     "version": "1.0.0",
     "main": "index.js",
     "type": "module",
